# pls

./: .gitignore  Cargo.toml  README.md  TASKRUNNER.md  TODO.md
.github/workflows/: cacheclean.yml  cargo.yml
src/: args.rs  cleanup.rs  commands.rs  config.rs  containers.rs  context.rs  default.rs  main.rs  name.rs  outputs.rs  rand.rs  runner.rs  shell.rs  target.rs  validate.rs  watch.rs
src/cmd/: build.rs  execute.rs  list.rs  mod.rs  run.rs  start.rs  status.rs  stop.rs  watch.rs
src/targets/: mod.rs
src/targets/artifact/: container_image.rs  exec.rs  mod.rs
src/targets/command/: container.rs  exec.rs  mod.rs
tests/: common.rs  test_build.rs  test_container_command.rs  test_exec_command.rs  test_list.rs  test_requires.rs  test_run.rs  test_start.rs  test_status.rs  test_variables.rs
