[package]
name = "taskrunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.5", features = ["derive"] }
ctrlc = "3.4.4"
daemonize = "0.5.0"
env_logger = "0.11.3"
glob = "0.3.1"
log = "0.4.22"
nix = { version = "0.29.0", features = ["signal"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
shlex = "1.3.0"
toml = "0.8.14"
