[package]
name = "taskrunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.5", features = ["cargo", "derive"] }
ctrlc = "3.4.4"
daemonize = "0.5.0"
env_logger = "0.11.3"
glob = "0.3.1"
log = "0.4.22"
nix = { version = "0.29.0", features = ["signal"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
shellexpand = "3.1.0"
shlex = "1.3.0"
toml = "0.8.14"
validator = { version = "0.18.1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
predicates = "3.1.0"
